@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.30 (unreleased)
 
+** gsasl: New parameter --priority to specify GnuTLS priority strings.
+Can be used to change TLS settings, which may be needed to talk to
+some servers.
+
 ** gsasl: Print web page links, per new GNU coding standard.
 
 ** doc: Modernize doxygen configuration.
